fix about page
bio image change to circle
remove scrollbar overflow x

--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,7 @@ body {
   text-wrap: pretty;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 main {
@@ -609,16 +610,23 @@ about page - page-id-21
 }
 
 .about-image {
+  display: block;
+  margin: 15px auto;
   width: 100%;
-  height: 100%;
-  min-height: 400px;
+  min-height: 300px;
+  max-height: 400px;
+  max-width: 400px;
+  height: auto;
+  aspect-ratio: 1/1;
   background-color: var(--color-darkgrey);
-  background-image: url("../images/bio-photo2.png");
+  background-image: url("../images/bio-photo3.png");
   background-size: cover;
   background-repeat:no-repeat;
   background-position:top right;
-  border-radius: 16px;
+  border-radius: 500px;
 }
+
+
 
 .about-text strong {
   color: var(--color-pink);
@@ -636,8 +644,8 @@ about page - page-id-21
   margin: 0 auto;
   position: relative;
   z-index: 100;
-    background-color: #fff;
-      padding: 30px;
+  background-color: #fff;
+  padding: 30px;
   border-radius: 16px;
 }
 
@@ -649,7 +657,7 @@ about page - page-id-21
 .about-fox {
   position: relative;
   padding: 150px 0 70px;
-margin-top: -70px;
+  margin-top: -70px;
   margin-bottom: 0;
   margin-left: calc(50% - 50vw); /* Break out to left edge */
   margin-right: calc(50% - 50vw); /* Break out to right edge */
